// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/ProgressBar Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-EZqKI btQcRO sc-jXcxbT AQTQX"
      color="#fff"
    >
      <div
        class="sc-bQCEYZ jiukjW"
      >
        10
        %
      </div>
      <div
        class="sc-jHcXXw bcuOvF"
        style="width: 10%;"
      >
        <div
          class="sc-fXgAZx hcKfZC"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Different Color 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-EZqKI btQcRO sc-jXcxbT AQTQX"
      color="#fff"
      type="danger"
    >
      <div
        class="sc-bQCEYZ jiukjW"
      >
        10
        %
      </div>
      <div
        class="sc-jHcXXw crFisn"
        style="width: 10%;"
      >
        <div
          class="sc-fXgAZx hcKfZC"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-EZqKI hAzvtr sc-jXcxbT AQTQX"
      color="#fff"
    >
      <div
        class="sc-bQCEYZ jiukjW"
      >
        10
        %
      </div>
      <div
        class="sc-jHcXXw bcuOvF"
        style="width: 10%;"
      >
        <div
          class="sc-fXgAZx hcKfZC"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;
